Flatten json structure for feature slideshow and fix clipped descender.

--- a/src/packages/modules/feature-slideshow-b1-x00/css/feature-slideshow-b1-x00.scss
+++ b/src/packages/modules/feature-slideshow-b1-x00/css/feature-slideshow-b1-x00.scss
@@ -22,7 +22,7 @@ $DOT_SIZE: 16px;
   position: relative;
 
   &.gray {
-    background:$gray80;
+    background: $gray80;
   }
 
   .fs-backdrop {
@@ -123,6 +123,8 @@ $DOT_SIZE: 16px;
     position: relative;
     padding-right: $captionPadding;
     margin-right: $captionPadding;
+    padding-top: 0.25em;
+    padding-bottom: 0.25em;
 
     // Gray divider
     &:after {
